--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ scroll-behavior: smooth;
 <a href="#" class="text-3xl font-['Pacifico'] text-primary">Sonderful</a>
 <nav class="hidden md:flex items-center space-x-8">
 <a href="#" class="font-medium text-gray-900 hover:text-primary transition">Home</a>
+<a href="landingPage2.html">LandigPage2</a> 
+<a href="landingPage3.html">LandingPage3</a>
 <a href="#corporate" class="font-medium text-gray-700 hover:text-primary transition">Corporate</a>
 <a href="#universities" class="font-medium text-gray-700 hover:text-primary transition">Universities</a>
 <a href="#about" class="font-medium text-gray-700 hover:text-primary transition">About Us</a>
